--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <title>Pati Movie</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
